--- a/components/test-go/overlays/development/deployment-patch.yaml
+++ b/components/test-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: test-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: tssc-quay-quay-tssc-quay.apps.cluster-8qlnb.8qlnb.sandbox2351.opentlc.com/tssc/test:7525c282c1566978bd44c55f88cd0899d69f2d01@sha256:01c0515f010207aefa7e2601ed226baa9d59c5c0da392cfb6eef7a9427374dcf
+          name: container-image
